# pjkm

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: adopt.md  agents.md  architecture.md  changelog.md  cli.md  conf.py  defaults.md  groups.md  index.md  mcp-server.md  pack-authoring.md  presets.md  quickstart.md  recipes.md  registry.md  templates.md  workspace.md
docs_internal/: ARCHITECTURE.md  GROUPS.md  MCP_EXTENSION.md  PACK_AUTHORING.md  TASKS.md  TEMPLATES.md
examples/: README.md  SCAFFOLDS.md  USAGE_GUIDE.md  pjkmrc.example.yaml
registry/: index.json
src/pjkm/: __init__.py  __main__.py
src/pjkm/cli/: app.py
src/pjkm/cli/commands/: adopt.py  config.py  groups.py  info.py  project.py  recipes.py  registry.py  workspace.py
src/pjkm/core/: defaults.py  utils.py
src/pjkm/core/engine/: dag.py  project_engine.py  task_context.py  task_runner.py
src/pjkm/core/groups/: registry.py  resolver.py  sources.py
src/pjkm/core/groups/definitions/: airflow.yaml  api.yaml  async_tools.yaml  auth.yaml  aws.yaml  caching.yaml  celery.yaml  ci_cd.yaml  cli_rich.yaml  code_quality.yaml  config_mgmt.yaml  coverage.yaml  crawling.yaml  database.yaml  dataviz.yaml  debugging.yaml  dev.yaml  dev_extended.yaml  doc_parsing.yaml  docker.yaml  docs.yaml  docs_mkdocs.yaml  elasticsearch.yaml  email.yaml  error_tracking.yaml  finance.yaml  frontend.yaml  frontend_vite.yaml  gateway.yaml  github_templates.yaml  google_cloud.yaml  gradio.yaml  graphql.yaml  grpc.yaml  hf.yaml  http_client.yaml  image.yaml  jupyter.yaml  k8s.yaml  kafka.yaml  (+43 more)
src/pjkm/core/groups/definitions/ai_ml/: agent_protocols.yaml  agents.yaml  audio.yaml  claude_sdk.yaml  dataviz.yaml  doc_parsing.yaml  embeddings.yaml  eval.yaml  finance.yaml  guardrails.yaml  hf.yaml  image.yaml  jupyter.yaml  langchain.yaml  langchain_providers.yaml  langgraph.yaml  langsmith.yaml  llm_providers.yaml  mcp_tools.yaml  ml.yaml  notebook.yaml  ocr.yaml  openai_sdk.yaml  rag.yaml  search_tools.yaml  torch.yaml  translation.yaml  vector_stores.yaml  video.yaml
src/pjkm/core/groups/definitions/core_dev/: async_tools.yaml  cli_rich.yaml  code_quality.yaml  config_mgmt.yaml  coverage.yaml  debugging.yaml  dev.yaml  dev_extended.yaml  file_utils.yaml  http_client.yaml  linting.yaml  logging.yaml  profiling.yaml  pydantic_extra.yaml  refactoring.yaml  reporting.yaml  scripts.yaml  security.yaml  testing.yaml  testing_extended.yaml  textual_tui.yaml  towncrier.yaml  typecheck.yaml
src/pjkm/core/groups/definitions/data_storage/: caching.yaml  database.yaml  elasticsearch.yaml  kafka.yaml  mongodb.yaml  neo4j.yaml  rabbitmq.yaml  redis.yaml  supabase.yaml
src/pjkm/core/groups/definitions/docs_meta/: docs.yaml  docs_mkdocs.yaml  (+2 more)
src/pjkm/core/models/: __init__.py  config.py  group.py  platform.py  project.py  task.py
src/pjkm/core/registry/: __init__.py  index.py
src/pjkm/core/tasks/: base.py  defaults.py  registry.py
src/pjkm/core/tasks/configure/: apply_groups.py  configure_linting.py  setup_git_lfs.py
src/pjkm/core/tasks/install/: pdm_install.py  pre_commit_install.py
src/pjkm/core/tasks/scaffold/: init_git.py  init_project.py  setup_remote.py
src/pjkm/core/tasks/verify/: verify_structure.py
src/pjkm/core/templates/: composer.py  loader.py  renderer.py
src/pjkm/mcp/: __init__.py  __main__.py  server.py
src/pjkm/templates/base/: copier.yml
src/pjkm/templates/base/template/: .editorconfig.jinja  .gitattributes.jinja  .gitignore.jinja  .gitlint.jinja  .readthedocs.yaml.jinja  CHANGELOG.md.jinja  CONTRIBUTING.md.jinja  README.md.jinja  pyproject.toml.jinja
src/pjkm/templates/fragments/auth_jwt/: copier.yml
src/pjkm/templates/fragments/compose_mongodb/: copier.yml
src/pjkm/templates/fragments/db_models/: copier.yml
src/pjkm/templates/fragments/docker_python/: copier.yml
src/pjkm/templates/fragments/docs_sphinx/: copier.yml
src/pjkm/templates/fragments/frontend_next/: copier.yml
src/pjkm/templates/fragments/github_actions_docs/: copier.yml
src/pjkm/templates/fragments/github_actions_k8s/: copier.yml
src/pjkm/templates/fragments/github_templates/: copier.yml
src/pjkm/templates/fragments/makefile_sections/: copier.yml
src/pjkm/templates/fragments/scripts_cli/: copier.yml
src/pjkm/templates/fragments/submodules/: copier.yml
src/pjkm/templates/fragments/towncrier/: copier.yml
src/pjkm/templates/poly_repo/: copier.yml
src/pjkm/templates/poly_repo/template/: .secrets.example.jinja  Makefile.jinja
src/pjkm/templates/script_tool/: copier.yml
src/pjkm/templates/service/: copier.yml
src/pjkm/templates/service/template/: .env.example.jinja  .secrets.example.jinja  Makefile.jinja
src/pjkm/templates/single_package/: copier.yml
src/pjkm/tui/: app.py  app.tcss
src/pjkm/tui/screens/: done.py  groups.py  progress.py  review.py  welcome.py
tests/: test_cli.py  test_core.py  test_dag.py  test_e2e.py  test_engine.py  test_group_sources.py  test_groups.py  test_integration.py  test_mcp.py  test_models.py  test_task_system.py  test_templates.py
(+183 files in other folders)
