[project]
name = "pjkm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Will", email = "you@example.com"},
]
dependencies = ["pydantic>=2.12.5", "pydantic-settings>=2.13.1", "typing-extensions>=4.15.0", "copier>=9.13.1", "jinja2>=3.1.6"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
