[project]
name = "pjkm"
version = "0.1.0"
description = "Python project builder with DAG-based task system, Copier templates, and Textual TUI"
authors = [{ name = "Will", email = "you@example.com" }]
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "typing-extensions>=4.15.0",
  "copier>=9.13.1",
  "jinja2>=3.1.6",
  "typer[all]>=0.15.0",
  "textual>=3.0.0",
  "pyyaml>=6.0.2",
  "tomli-w>=1.2.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
keywords = ["scaffolding", "project-builder", "copier", "template", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Typing :: Typed",
]

[project.scripts]
pjkm = "pjkm.cli.app:app"

[project.urls]
Homepage = "https://github.com/you/pjkm"
Repository = "https://github.com/you/pjkm"
Issues = "https://github.com/you/pjkm/issues"
Documentation = "https://github.com/you/pjkm/tree/main/docs_internal"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.0",
  "ruff>=0.15.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pjkm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
