[project]
name = "pjkm"
version = "0.1.0"
description = "Python project builder with DAG-based task system, Copier templates, and Textual TUI"
authors = [{ name = "Will", email = "will@pr1m8.dev" }]
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "typing-extensions>=4.15.0",
  "copier>=9.13.1",
  "jinja2>=3.1.6",
  "typer[all]>=0.15.0",
  "textual>=3.0.0",
  "pyyaml>=6.0.2",
  "tomli-w>=1.2.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
keywords = ["scaffolding", "project-builder", "copier", "template", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Typing :: Typed",
]

[project.scripts]
pjkm = "pjkm.cli.app:app"
pjkm-mcp = "pjkm.mcp.server:main"

[project.urls]
Homepage = "https://github.com/pr1m8/pjkm"
Repository = "https://github.com/pr1m8/pjkm"
Issues = "https://github.com/pr1m8/pjkm/issues"
Documentation = "https://github.com/pr1m8/pjkm/tree/main/docs_internal"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.0",
  "ruff>=0.15.0",
]
docs = [
  "sphinx>=8.0.0",
  "sphinx-autobuild>=2024.10.0",
  "sphinx-autodoc-typehints>=3.0.0",
  "sphinx-autoapi>=3.4.0",
  "sphinx-copybutton>=0.5.0",
  "sphinx-design>=0.6.0",
  "sphinxcontrib-mermaid>=1.0.0",
  "myst-parser>=4.0.0",
  "furo>=2024.8.0",
]
mcp = [
  "fastmcp>=2.0.0",
  "langchain-mcp-adapters>=0.1.8",
]

[project.entry-points."pjkm.groups"]
[project.entry-points."pjkm.tasks"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pjkm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.pdm.scripts]
fmt = "ruff format src tests"
lint = "ruff check src tests"
check = {composite = ["fmt", "lint"]}
test = "pytest"
typecheck = "pyright src"
cov = "pytest --cov --cov-report=html --cov-report=term-missing"
clean = {shell = "rm -rf dist/ build/ *.egg-info .pytest_cache .mypy_cache .ruff_cache htmlcov/"}

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests", "docs"]

[tool.coverage.run]
source = ["src/pjkm"]
branch = true
omit = [
  "src/pjkm/templates/*",
  "src/pjkm/tui/*",
  "src/pjkm/__main__.py",
  "src/pjkm/mcp/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 78
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
